# ANIclustermap

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  publish_to_pypi.yml
aniclustermap/: aniclustermap.py
example/: example_run.sh
example/output/01_minimal_dataset/: ANIclustermap_matrix.tsv
example/output/02_minimal_dataset_annotation/work/: fastani_result.matrix  genome_fasta_file_list.txt
example/output/03_small_dataset/work/: genome_fasta_file_list.txt
example/output/04_small_dataset_annotation/: ANIclustermap_dendrogram.nwk  ANIclustermap_matrix.tsv
example/output/04_small_dataset_annotation/work/: fastani_matrix.tsv  fastani_result.matrix
example/output/05_normal_dataset/: ANIclustermap_dendrogram.nwk
example/output/05_normal_dataset/work/: fastani_matrix.tsv
example/output/06_normal_dataset_annotation/: ANIclustermap_matrix.tsv
example/output/06_normal_dataset_annotation/work/: fastani_result.matrix  genome_fasta_file_list.txt
example/output/minimal_dataset/: ANIclustermap_dendrogram.nwk
example/output/minimal_dataset/work/: fastani_matrix.tsv  fastani_result.matrix
src/aniclustermap/: aniclustermap.py
tests/: conftest.py  test_aniclustermap.py
