[tool.poetry]
name = "aniclustermap"
version = "1.0.0"
description = "A tool for drawing ANI clustermap between all-vs-all microbial genomes"
authors = ["moshi"]
license = "MIT"
homepage = "https://github.com/moshi4/ANIclustermap/"
repository = "https://github.com/moshi4/ANIclustermap/"
readme = "README.md"
keywords = [
    "bioinformatics",
    "genomics",
    "phylogenetics",
    "visualization",
    "clustermap",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
include = ["tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --tb=line --cov-report=xml --cov-report=term"
testpaths = ["tests"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
ANIclustermap = "aniclustermap.aniclustermap:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
