[tool.poetry]
name = "aniclustermap"
version = "1.4.0"
description = "A tool for drawing ANI clustermap between all-vs-all microbial genomes"
authors = ["moshi"]
license = "MIT"
homepage = "https://github.com/moshi4/ANIclustermap/"
repository = "https://github.com/moshi4/ANIclustermap/"
readme = "README.md"
keywords = [
    "bioinformatics",
    "genomics",
    "phylogenetics",
    "visualization",
    "clustermap",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
include = ["tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --tb=long --cov-report=xml --cov-report=term"
testpaths = ["tests"]

# Lint Rules: https://beta.ruff.rs/docs/rules
[tool.ruff]
select = ["E", "F", "W", "I", "D", "B"]
ignore = [
    "D100",
    "D101",
    "D104",
    "D105",
    "D205",
    "D400",
    "D401",
    "D403",
    "D415",
    "B905",
]
src = ["src", "tests"]
line-length = 88

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=1.4.1"
seaborn = ">=0.11.2"
scipy = ">=1.9.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.0"
pytest = ">=7.1.1"
pytest-cov = ">=3.0.0"

[tool.poetry.scripts]
ANIclustermap = "aniclustermap.aniclustermap:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
